<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CEA店面管理</string>
    <string name="city">CEA业务终端店面信息采集</string>
    <string name="version">版本: %s</string>
    <string name="work_in_progress">请注意该程序正在运行中.</string>
    <string name="send_me_bugs">当你遇到程序错误有必要修改或者有其他建议的时候，可以通过Email或者主页上发表主题评论联系我。</string>
    <string name="close">关闭</string>
    <string name="clear">清除</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="bottom">信息提交管理</string>
    <string name="task">任务列表</string>
    <string name="test">上传任务</string>
    <string name="current_address_text">当前位置：</string>

    <!-- Strings topic item -->
    <string name="pre_topic">上一步</string>
    <string name="next_topic">下一步</string>
    <string name="take_photo">拍照</string>
    <string name="submit_topic">提交信息</string>
    <string name="resume_topic">重新采集</string>
    <string name="submit_answer">信息正在提交</string>
    <string name="not_allow_blank_txt">(必填)</string>
    <string name="not_allow_blank_info">信息不能为空</string>
    <string name="submit">提交</string>
    
    <!-- Strings login -->
    <string name="login">登 录</string>
    <string name="logining">登录中</string>
    <string name="username">帐 号:</string>
    <string name="password">密 码:</string>
    <string name="remember_password">记住密码</string>
    <string name="user_password_must_fill">密码不能为空!</string>
    <string name="version_check">版本检查中</string>
    <string name="remeber_info">记住密码</string>
    <string name="imei">IMEI：</string>
    
   <!-- Strings topic choose -->
    <string name="shop_type_choice_title">请选择店面类型</string>
    <string name="tasklist_title">请选择任务</string>
    <string name="shoplist_title">请选择店面</string>
    <string name="task_title">信息提交管理</string>
    
    <!-- Content -->
    <string name="shoplist">店面列表</string>
    <string name="tasklist">任务列表</string>
    <string name="sign_in">签到</string>
    <string name="sign_leave">签离</string>
    <string name="content_shoplist">巡店</string>
    
    <!-- Strings http -->
    <string name="http_error">数据传输出现异常!</string>
    <string name="http_exception">数据请求处理中出现异常:</string>
    <string name="http_connection_error">网络连接错误,请确定是否连接了网络</string>
     <string name="no_task">没有任务!</string>
    
    <!-- String shop list -->
    <string name="data_loading">数据正在加载</string>
    
    <!-- Strings shop -->
    <string name="shop_start_answer">开始采集</string>
    <string name="data_saving">数据正在保存</string>
    <string name="data_dealing">数据正在处理</string>
    
    <!-- Strings Map -->
    <string name="map_shop_choice_title">确认？</string>
    <string name="allow_blank">选填</string>
    <string name="not_allow_blank">必填</string>
    <string name="btn_new_competitor">新增店面</string>
    <string name="map_shop_choice_content">当前位置： %1$s \n采集店面：%2$s \n请确认你是否在店面所在位置，现在开始信息采集？</string>
       
    <!-- String task list -->
    <string name="end_time">剩余时间：</string>

	<!-- Strings upload task -->
    <string name="task_status">状态：</string>
    <string name="upload_task">上传任务</string>
    <string name="task_back_to_survey">返回</string>
    
    <string name="search_label">搜索</string>
    <string name="search_hint">请输入店面编码或店面名称</string>
    <string name="kewword_must_fill">请输入店面编码或店面名称</string>
    
    <!-- LoginActivity -->
    <string name="login_online_http_error">无法连接到网络</string>
    <string name="login_loginbuttonclick_password_not_allow_balnk">密码不能为空</string>
    <string name="login_downloadapk_doinbackground_ioexception">后台下载传输错误</string>
    
    <!-- DotaskActivity -->
    <string name="max_title">输入提示</string>
    <string name="max_message">输入超过默认最大值</string>
    <string name="max_ok">确定输入</string>
    <string name="max_cancel">修改</string>
    <string name="return_to_last">返回最后一题</string>   
    <string name="back_message">确认退出到任务列表？</string>
    <string name="back_ok">确定</string>
    <string name="back_cancel">取消</string>
    <string name="back_title">退出提示</string>
    
    <!-- dialog_timeout.xml -->
    <string name="timeout">登录超时,请重新登录</string>
    <string name="timeout_button">确定</string>
    
    <string name="builder_Title">消息提示</string>  
    
    <!-- Strings StatusDetection -->
    <string name="no_Available_Network">无可用网络</string>
    <string name="sdcard_Not_Available">SD卡不可用</string>
    <string name="leak_memory">内存不足</string>
    <string name="leak_sdcard_space">SD卡剩余空间不足</string>
    
    <string name="version_Update">版本升级</string>
    <string name="new_Version_Message">新版本已下载完毕，立即安装?</string>
    <string name="dialog_Ok">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_Update_Straightway">立即更新</string>
    <string name="dialog_Not_Update_Now">暂不升级</string>
    <string name="find_New_Version">发现新版本</string>
    <string name="progress_Title">正在下载更新</string>
    <string name="progress_Message">正在下载,请稍等</string>
    
    <string name="delete_datas">重置数据</string>
    <string name="delete_datas_success">重置数据成功</string>
   	<string name="delete_datas_fail">重置数据失败</string>
</resources>